# movs-validator

./: .project  .pydevproject  README.md  mypy.ini  pyproject.toml  setup.py
movsvalidator/: __init__.py  __main__.py  movsvalidator.py
src/: __main__.py  movsvalidator.py
src/movsvalidator/: __init__.py
stubs/: setuptools.pyi
