[build-system]
build-backend = "pdm.backend"
requires = [ "pdm-backend" ]

[project]
name = "zeed-movs-validator"
version = "0.0.2"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "zeed-movslib>=0.0.3",
]
urls.Homepage = "https://github.com/ZeeD/movs-validator"
urls.Repository = "https://github.com/ZeeD/movs-validator.git"
scripts.movs-validator = "movsvalidator.movsvalidator:main"

[dependency-groups]
dev = [
    "coverage>=7.6.11",
    "mypy>=1.10.1",
    "pyproject-fmt>=2.4.3",
    "ruff>=0.5",
]

[tool.pdm]
distribution = true
plugins = [ "pdm-version" ]

[tool.pdm.scripts]
_.env = { PYTHONPATH = "src:tests" }
lint = { composite = [
    "pyproject-fmt pyproject.toml",
    "ruff format .",
    "ruff check --exit-zero .",
    "dmypy run .",
] }
tests = { composite = [
    "coverage run -m unittest discover --verbose --locals --failfast --catch --start-directory tests",
    "coverage report",
    "coverage erase",
] }
start = "movs-validator"

[tool.ruff]
line-length = 80
src = [ "src", "tests" ]
fix = true
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "ANN1",   # disabled by me
    "COM812", # conflicts with formatter
    "D1",     # disabled by me
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    "ISC001", # conflicts with formatter
    "PT009",  # disabled by me
    "PT027",  # disabled by me
    "Q001",   # conflicts with formatter
    "Q002",   # conflicts with formatter
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-quotes.docstring-quotes = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-type-checking.quote-annotations = true
lint.isort.force-single-line = true

[tool.pyproject-fmt]
column_width = 80
indent = 4

[tool.coverage.run]
branch = true
source = [ "src", "tests" ]

[tool.coverage.report]
show_missing = true
sort = "Cover"
skip_empty = true

[tool.mypy]
mypy_path = [ "src", "tests" ]
strict = true
warn_unused_configs = true
